<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.ForgotPasswordScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/app_list_icon_dimension"
                android:layout_marginBottom="@dimen/dimen_60dp">

                <ImageView
                    android:id="@+id/activity_forgot_password_imageview"
                    android:layout_width="@dimen/login_image_dimension"
                    android:layout_height="@dimen/login_image_dimension"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/login_image"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/activity_forgot_password_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:hint="@string/enter_username"
                android:textAlignment="center"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/activity_forgot_password_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/activity_forgot_password_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/activity_forgot_password_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/activity_forgot_password_get_otp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:text="@string/get_otp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginTop="@dimen/margin"
                android:elevation="@dimen/elevation"
                android:background="@drawable/shape_rectangular_button"
                android:layout_marginBottom="@dimen/dimen_20dp"/>

            <Button
                android:id="@+id/activity_forgot_password_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginTop="@dimen/margin"
                android:elevation="@dimen/elevation"
                android:background="@drawable/shape_rectangular_button"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:background="@android:color/transparent"
                android:layout_marginBottom="@dimen/login_vertical_margin_top">

                <TextView
                    android:id="@+id/activity_forgot_password_resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/resend_otp"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>