<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/activity_dashboard"/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/text_size_20"
    tools:context="com.vassar.unifiedapp.ui.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_description"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20"/>

        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20"
            android:text="Description of App"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_phone"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_20"
            android:text=" 7337582244"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_email"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20"/>

        <TextView
            android:id="@+id/tv_email"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20"
            android:text=" apps@vassarlabs.com"/>

    </LinearLayout>

</LinearLayout>
</RelativeLayout>