<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_parent_layout"
    android:background="@android:color/transparent"
    tools:context=".ui.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:elevation="10dp"
        android:indeterminateTint="@color/white"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/icon_dimension"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/app_list_icon_dimension"
                    android:layout_marginBottom="@dimen/dimen_60dp">

                    <ImageView
                        android:id="@+id/activity_login_imageview"
                        android:layout_width="@dimen/login_image_dimension"
                        android:layout_height="@dimen/login_image_dimension"
                        android:layout_centerHorizontal="true"
                        android:adjustViewBounds="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/login_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/activity_login_imageview"
                        android:layout_marginTop="@dimen/dimen_20dp"
                        android:background="@android:color/transparent"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/splash_text_size"
                        android:textAlignment="center"
                        android:id="@+id/app_name"
                        android:textColor="@color/white"
                        android:text="@string/app_name" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/activity_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:layout_marginLeft="@dimen/double_margin"
                    android:singleLine="true"
                    android:layout_marginRight="@dimen/double_margin"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:hint="@string/username"
                    android:importantForAutofill="no"/>

                <EditText
                    android:id="@+id/activity_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:layout_marginLeft="@dimen/double_margin"
                    android:layout_marginRight="@dimen/double_margin"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />


                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/double_margin"
                    android:text="Show password"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:id="@+id/show_password_login"
                    />


                <Button
                    android:id="@+id/activity_login_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/double_margin"
                    android:layout_marginRight="@dimen/double_margin"
                    android:layout_marginTop="@dimen/margin"
                    android:elevation="@dimen/elevation"
                    android:background="@drawable/shape_rectangular_button"
                    android:layout_marginBottom="@dimen/dimen_20dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/double_margin"
                    android:layout_marginRight="@dimen/double_margin"
                    android:background="@android:color/transparent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:visibility="visible"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:id="@+id/activity_login_forgot"
                        android:layout_toLeftOf="@+id/activity_login_click_here"
                        />

                    <TextView
                        android:id="@+id/activity_login_click_here"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:visibility="visible"
                        android:textColor="@android:color/white"
                        android:text="@string/click_here"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/white"
                    android:layout_below="@id/activity_login_submit"
                    android:id="@+id/app_version"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>